# SQR-Nix-Explorer

./: .gitignore  Dockerfile  README.md  locustfile.py  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: bandit.yml  codeql.yml  main.yml  performance.yml
back/: fastapi.py  main.py  nix.py  utils.py
back/api/: config.py  dependencies.py  errors.py
back/api/routes/: __init__.py  auth.py  store.py
back/api/schemas/: auth.py
back/api/services/: store.py  user.py
back/db/: base.py  crud.py  models.py  repository.py
front/: app.py  requirements.txt
front/.devcontainer/: devcontainer.json
front/routes/: dif_packages.py  diff.py  diff_stores.py  search.py  stores.py
front/services/: kv_store.py  mock_nix_api.py  nix_api.py  rest_nix_api.py  st_sess_kv_store.py
front/structs/: package.py
tests/: conftest.py  test_auth.py  test_crud.py  test_models.py  test_nix.py
tests/api/: conftest.py  test_auth.py  test_store.py
tests/recovery/: test_recovery.py
