[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "back" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "back.main:run_dev_server"